<resources>

    <string name="app_name">Alarma hablada</string>
    <string name="NuevaAlarma">Añadir alarma</string>
    <string name="tvAlarma">Alarma</string>
    <string name="twitter">Twitter</string>
    <string name="weather">El Tiempo</string>
    <string name="ubuMail">UBU Mail</string>
    <string name="ubuCalendar">Ubu Calendario</string>
    <string name="accept">Aceptar</string>
    <string name="DateTime">Días</string>
    <string name="CustomMessage">Mensaje personalizado</string>
    <string name="Time">Hora</string>
    <string name="Days">Días</string>
    <string name="Access">Accesos</string>
    <string name="UBU">UBU</string>
    <string name="twitterAccess">Acceso a twitter</string>
    <string name="User">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="twitterAccessHint">Télefono, correo o usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="options">Opciones</string>
    <string name="accessUbu">Acceso a UBU</string>
    <string name="accessWeather">Acceso a el Tiempo</string>
    <string name="accessCp">Introduce Código Postal</string>
    <string name="cp">Código postal</string>
    <string name="accessMessage">Introduce tu mensaje personalizado</string>
    <string name="accessCustomMessage">Introduce el mensaje personalizado</string>
    <string name="Music">Música</string>
    <string name="SelectSong">Selecciona canción</string>
    <string name="mail">Correo</string>
    <string name="Description">Descripción</string>
    <!-- Dias de la semana -->
    <string name="Monday">Lunes</string>
    <string name="Tuesday">Martes</string>
    <string name="Wednesday">Miercoles</string>
    <string name="Thursday">Jueves</string>
    <string name="Friday">Viernes</string>
    <string name="Saturday">Sábado</string>
    <string name="Sunday">Domingo</string>
    <!-- Meses del año -->
    <string name="January">Enero</string>
    <string name="February">Febrero</string>
    <string name="March">Marzo</string>
    <string name="April">Abril</string>
    <string name="May">Mayo</string>
    <string name="June">Junio</string>
    <string name="July">Julio</string>
    <string name="August">Agosto</string>
    <string name="September">Septiembre</string>
    <string name="October">Octubre</string>
    <string name="November">Noviembre</string>
    <string name="December">Diciembre</string>


    <string name="Name">Nombre</string>
    <string name="Song">Canción</string>
    <string name="calendar">Calendario</string>
    <string name="DeleteAlarm">Borra Alarma</string>
    <string name="setName">Introduce tu nombre</string>
    <string name="stopAlarm">Para alarma</string>
    <string name="from">Remitente</string>
    <string name="Subject">Asunto</string>
    <string name="setCustomMessage">Introduce mensaje personalizado</string>
    <string name="City">Ciudad</string>
    <string name="Title">Título</string>
    <string name="SetCity">Introduce tu localidad</string>
    <string name="SetMail">Introduce tu Mail</string>
    <string name="SetPassword">Introduce Contraseña</string>
    <string name="Sr">Don</string>
    <string name="Mrs">Doña</string>
    <string name="Empty">Vacío</string>
    <string name="SetTitle">Introduce tu título</string>
    <string name="SetGmailMail">Introduce tu Mail de gmail sin \"@gmail.com\"</string>
    <string name="Welcome">Saludo</string>
    <string name="Stop">Stop</string>
    <string name="isActive">Está activa</string>
    <string name="isAllowed">Está permitida</string>
    <string name="Contact">Contacto</string>
    <string name="Email">Correo electrónico</string>
    <string name="Back">Volver</string>
    <string name="helpAlarm">Ayuda para alarma</string>
    <string name="helpCalendar">Ayuda para calendario</string>
    <string name="helpContact">Ayuda para contacto</string>
    <string name="helpMail">Ayuda para Correo electrónico</string>
    <string name="helpWeather">Ayuda para el tiempo</string>


</resources>
