<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alvaroperezdelgado.alarmahablada.Options.SetMailOptions">

    <RelativeLayout
        tools:context=".Alarm.SetAlarmCustomMessage"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/relativeLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/SetMail"
                android:id="@+id/textView7"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/etSetMailAddress"
                android:hint="@string/SetGmailMail"
                android:gravity="left|top"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/etSetMailPass"
                android:inputType="textPassword"
                android:hint="@string/SetPassword"
                android:gravity="left|top"
                android:layout_below="@+id/etSetMailAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:id="@+id/btAcceptMailOptions"
                android:layout_column="0"
                android:layout_above="@+id/btCancelMailOptions"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/ButtonColorAcceptCancel"
                android:textColor="@color/ButtonTextColorAcceptCancel" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btCancelMailOptions"
                android:layout_column="0"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/ButtonColorAcceptCancel"
                android:textColor="@color/ButtonTextColorAcceptCancel"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
