<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btWeather">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_alignParentTop="true"
            android:layout_weight="0.87"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btSpeechCustom"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/HeightTalkButtons"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btSpeechCalendar"
                    android:text="@string/CustomMessage" />

                <Button
                    android:id="@+id/btSpeechWeather"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/HeightTalkButtons"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btSpeechCustom"
                    android:text="@string/weather" />

                <Button
                    android:id="@+id/btSpeechCalendar"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/HeightTalkButtons"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/calendar" />

                <Button
                    android:id="@+id/btSpeechMail"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/HeightTalkButtons"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btSpeechWeather"
                    android:text="@string/mail" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:text="Tiempo" />

    <Button
        android:id="@+id/btMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/mail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:id="@+id/btCalendar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
