<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alarm.SetAlarmCustomMessage">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setCustomMessage"
            android:id="@+id/tvSetName"
            android:layout_column="0" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/etSetName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:hint="@string/setCustomMessage"
            android:gravity="left|top" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:id="@+id/btSetCustomMessageAccept"
            android:layout_column="0"
            android:background="@color/ButtonColorAcceptCancel"
            android:textColor="@color/ButtonTextColorAcceptCancel"
            android:layout_above="@+id/btSetCustomMessageCancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btSetCustomMessageCancel"
            android:layout_column="0"
            android:background="@color/ButtonColorAcceptCancel"
            android:textColor="@color/ButtonTextColorAcceptCancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

</TableLayout>
</RelativeLayout>